correct instagram section mobile display style

--- a/app/scss/components/main/instagram-section.scss
+++ b/app/scss/components/main/instagram-section.scss
@@ -5,6 +5,7 @@
   text-align: center;
 
   @include small {
+    display: block;
     overflow: hidden;
   }
 
